tests/expectations/compiler/const_generics/const_generics_non_inline.out
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:14:8
     |
  14 |     fn bar1::[N: u32]() { }
     |        ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:16:14
     |
  16 |     async fn bar2::[N: u32]() -> Future {
     |              ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:1:4
     |
   1 | fn foo1::[N: u32](x: u32) -> u32 {
     |    ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:5:10
     |
   5 | async fn foo2::[N: u32](x: u32) { }
     |          ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:8:8
     |
   8 | script baz::[N: u32]()  { }
     |        ^^^
